deployment-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-demo-two-apps
spec:
  replicas: 5
  template:
    metadata:
      labels:
        app: k8s-demo-two-apps
    spec:
      containers:
        - name: k8s-demo-two-apps
          image: barsu4ello/k8s-demo-two-apps
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
          ports:
            - containerPort: 8080 # Носит информативный характер для других разработчиков (по факту ни на что не влияет)
  selector:
    matchLabels:
      app: k8s-demo-two-apps
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-two-apps
spec:
  selector:
    app: k8s-demo-two-apps
  ports:
    - port: 8080
  type: LoadBalancer
