nginx-unprivileged.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  template:
    metadata:
      name: nginx
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged:alpine3.21
          resources:
            limits:
              memory: "128Mi"
              cpu: "125m"
          ports:
            - containerPort: 8080
  selector:
    matchLabels:
      app: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 8080 # Можно не указывать, если port и targetPort совпадают
  type: ClusterIP # Можно не указывать (ClusterIP значение по умолчанию)
